# niri-monitors

./: AGENTS.md  Cargo.toml  LICENSE  README.md
contrib/systemd/: niri-monitorsd.service
docs/: config.md  daemon.md  gui.md
src/: config.rs  control.rs  daemon.rs  lib.rs  matching.rs  model.rs  placement.rs
src/gui/: app.rs  canvas.rs  daemon_client.rs  mod.rs  output_editor.rs  profile_editor.rs  profile_list.rs
src/niri/: apply.rs  ipc.rs  mod.rs  output.rs
