[package]
name = "niri-monitors"
version = "0.1.2"
edition = "2024"
description = "Monitor profile daemon and GUI for the niri compositor"
license = "MIT"
repository = "https://github.com/svart/niri-monitors"
homepage = "https://github.com/svart/niri-monitors"
readme = "README.md"
keywords = ["niri", "wayland", "monitors", "profiles", "daemon"]
categories = ["command-line-utilities", "config", "gui"]
exclude = ["AGENTS.md"]

[features]
default = ["gui"]
gui = ["dep:eframe", "dep:egui"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.31", optional = true, default-features = false, features = ["accesskit", "default_fonts", "glow", "wayland"] }
egui = { version = "0.31", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "niri-monitors-gui"
path = "src/bin/niri-monitors-gui.rs"
required-features = ["gui"]

[profile.dev]
debug = "line-tables-only"
